# katas

bowling_game/: CMakeLists.txt  build_then_test.bash
bowling_game/src/: CMakeLists.txt  game.cpp  game.h
bowling_game/test/: CMakeLists.txt  tests.cpp
trading_card_game/: CMakeLists.txt  build_then_test.bash
trading_card_game/cmake/: Conan.cmake
trading_card_game/src/: CMakeLists.txt  game.cpp  main.cpp
trading_card_game/test/: CMakeLists.txt
